syntax = "proto3";
option java_package = "com.dj.im.sdk.proto";
option java_outer_classname = "PrGetHistoryMessage";
import "prPushMessage.proto";

message GetHistoryMessageRequest {
    // 读取的会话
    string conversationKey = 1;
    // 在这条消息之前
    int64 messageId = 2;
}

message GetHistoryMessageResponse {
    repeated PushMessageResponse messages = 1;
}
